Content complete for all but lessons, needs majority of styles

--- a/wp-content/themes/collins-music-academy/parts/header.html
+++ b/wp-content/themes/collins-music-academy/parts/header.html
@@ -1,12 +1,5 @@
 <!-- wp:group {"tagName": "header"} -->
 <header class="wp-block-group">
-  <!-- wp:template-part {"slug":"nav", "tagName": ""} /-->
-  <!-- wp:paragraph -->
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur iste
-    quos maxime illum minima nostrum, aut totam autem deleniti eos! Esse
-    adipisci consequatur dolorem aut et sint commodi, quae nulla!
-  </p>
-  <!-- /wp:paragraph -->
+  <!-- wp:template-part {"slug":"nav"} /-->
 </header>
 <!-- /wp:group -->
