--- a/wp-content/themes/collins-music-academy/parts/nav.html
+++ b/wp-content/themes/collins-music-academy/parts/nav.html
@@ -1,8 +1,22 @@
-<!-- wp:list -->
-<ul>
-  <li>Music Academy</li>
-  <li>Home</li>
-  <li>Instructors</li>
-  <li>Lessons</li>
-</ul>
-<!-- /wp:list -->
+<!-- wp:group -->
+<div class="wp-block-group navigation">
+  <!-- wp:paragraph -->
+  <p class="wp-block-paragraph">
+    <a href="#" class="wp-block-link">Collins Music Academy</a>
+  </p>
+  <!-- /wp:paragraph -->
+  <!-- wp:list -->
+  <ul>
+    <li>
+      <a href="#">Home</a>
+    </li>
+    <li>
+      <a href="#">Lessons</a>
+    </li>
+    <li>
+      <a href="#">Instructors</a>
+    </li>
+  </ul>
+  <!-- /wp:list -->
+</div>
+<!-- /wp:group -->
