--- a/wp-content/themes/collins-music-academy/parts/nav.html
+++ b/wp-content/themes/collins-music-academy/parts/nav.html
@@ -8,13 +8,13 @@
   <!-- wp:list -->
   <ul>
     <li>
-      <a href="#">Home</a>
+      <a href="/">Home</a>
     </li>
     <li>
-      <a href="#">Lessons</a>
+      <a href="/page-lessons">Lessons</a>
     </li>
     <li>
-      <a href="#">Instructors</a>
+      <a href="/page-instructors">Instructors</a>
     </li>
   </ul>
   <!-- /wp:list -->
